--- a/index.html
+++ b/index.html
@@ -9,16 +9,18 @@
 </head>
 
 <body>
-    <div class="background">
     <header>
-        <section class="highscores"> 
-            <button class="viewHighscoresButton">View Highscores</button>
+        <section> 
+            <button class="viewHighscoresB">View Highscores</button>
         </section>
-
     </header>
-    </div>
+    <main>
+        <h1 class="codingTitle">Coding Quiz Challenge</h1>
+        <p class="underTitle">Try to answer the following code-related questions within the time limit. Keep in mind that incorrect answers will penalize your scoretime by ten seconds!</p>
+        <button class="startQuizB">Start Quiz</button>
+    </main>
 
-    <footer>made by Anika Hussain</footer>
+    <footer>Made by Anika Hussain</footer>
     <script>src="./assets/js/script.js"</script>
 </body>
 
