all game tags added

--- a/index.html
+++ b/index.html
@@ -14,17 +14,29 @@
             <button class="viewHighscoresB">View Highscores</button>
         </section>
     </header>
-    <main>
-        <h1 class="codingTitle">Coding Quiz Challenge</h1>
-        <p class="underTitle">Try to answer the following code-related questions within the time limit. Keep in mind that incorrect answers will penalize your scoretime by ten seconds!</p>
-        <button class="startQuizB">Start Quiz</button>
 
-        
+    <main>
+        <section>
+            <h1 class="codingTitle">Coding Quiz Challenge</h1>
+            <p class="underTitle">Try to answer the following code-related questions within the time limit. Keep in mind that incorrect answers will penalize your scoretime by ten seconds!</p>
+            <button class="startQuizB">Start Quiz</button>
+        </section>
+        <section>
+            <h2><strong>All done!</strong></h2>
+            <p>Your final score is:</p>
+            <p>Enter Name:</p>
+            <button>Submit</button>
+        </section>
+        <section>
+            <h3>Highscores</h3>
+            <button>Go Back</button>
+            <button>Clear Highscores</button>
+        </section>
     </main>
 
     <footer>Made by Anika Hussain</footer>
+
     <script>src="./assets/js/script.js"</script>
 </body>
-
 
 </html>
