--- a/index.html
+++ b/index.html
@@ -22,13 +22,16 @@
             <button class="startQuizB">Start Quiz</button>
         </section>
         <section>
-            <h2><strong>All done!</strong></h2>
+            <h2 class="timeCountdown"></h2>
+        </section>
+        <section id="allQuestionsAnswered">
+            <h3><strong>All done!</strong></h3>
             <p>Your final score is:</p>
-            <p>Enter Name:</p>
+            <p>Enter Initials:</p>
             <button>Submit</button>
         </section>
-        <section>
-            <h3>Highscores</h3>
+        <section class="finalHighscorePage">
+            <h4>Highscores</h4>
             <button>Go Back</button>
             <button>Clear Highscores</button>
         </section>
