--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
         <section>
             <h2 class="timeCountdown"></h2>
         </section>
+        <!--
         <section id="allQuestionsAnswered">
             <h3><strong>All done!</strong></h3>
             <p>Your final score is:</p>
@@ -34,12 +35,13 @@
             <h4>Highscores</h4>
             <button>Go Back</button>
             <button>Clear Highscores</button>
-        </section>
+        </section>-->
     </main>
 
     <footer>Made by Anika Hussain</footer>
 
-    <script>src="./assets/js/script.js"</script>
+    <script src="./assets/js/questions.js"></script>
+    <script src="./assets/js/script.js"></script>
 </body>
 
 </html>
