styling in css changed

--- a/index.html
+++ b/index.html
@@ -15,10 +15,10 @@
         </section>
         <div class="timer"></div>
     </header>
-    
+
     <main>
         <section class="codingQuiz">
-            <h1>Coding Quiz Challenge</h1>
+            <h1 class="codingQuizTitle">Coding Quiz Challenge</h1>
             <p id="codingQuiz">Try to answer the following code-related questions within the time limit. Keep in mind that incorrect answers will penalize your scoretime by ten seconds!</p>
             <button class="startQuizB" id="button">Start Quiz</button>
         </section>
@@ -28,11 +28,11 @@
             <div id="popup"></div>
         </section>
         <section id="endPage">
-            <div class="viewHighscoresB" id="button">View Highscores</div>
-            <input type="text" id="enterInitals" placeholder="Enter your initals HERE" />
-            <button class="initalSubmitB" id="button">Submit</button>
+            <div class="viewHighscores" id="button">View Highscores</div>
+            <input type="text" id="enterInitials" placeholder="Enter your initials here" />
+            <button class="initialSubmitB" id="button">Submit</button>
             <div class="playAgainB" id="button">Play Again</div>
-            <div class="saveScoresB" id="button">Save my Highscore</div>
+            <div class="saveScoresB" id="button">Save my Score</div>
         </section>
     </main>
 
